2002-03-10  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf-sources.c (gconf_sources_query_metainfo): fix
	obnoxious typo (s/mi/this_mi/), also needed to fix bug 
	reported by Kristian.

	* backends/xml-backend.c (query_metainfo): make key relative prior
	to looking up metainfo. Fixes bug where schema defaults would
	mysteriously get lost in some cases, reported by Kristian
	Rietveld.

2002-03-07  Havoc Pennington  <hp@pobox.com>

	* backends/xml-test.c: test program for XML backend code

	* configure.in: add a "minimum" debug mode and compile with it
	by default.

	* gconf/gconftool.c (main): call setlocale()

	* tests/runtests.sh: run tests in various locales

	* gconf/gconf-value.h: add more padding to GConfEntry
	
	* gconf/gconf-internals.c (gconf_CORBA_Object_equal):
	(gconf_CORBA_Object_hash): remove stupid inlining of these
	functions

2002-02-26  Havoc Pennington  <hp@redhat.com>

	* gconf/gconf-client.c (notify_one_entry): protect notify callback 
	with a reference count around the entry, for reentrancy. Reported
	by Rodrigo Moya and Alex Larsson.

	* gconf/gconf-value.c (gconf_entry_unref, gconf_entry_ref): new
	internal (for now) functions
	(gconf_entry_free): just call gconf_entry_unref

Sat Feb 16 01:27:29 2002  Jonathan Blandford  <jrb@redhat.com>

	* gconf/gconftool.c (read_value_type): fix typo in reading args.

2002-02-14  Dave Camp  <dave@ximian.com>

	* gconf/gconf.c: (gconf_string_to_enum): Use g_ascii_strcasecmp
	instead of g_strcasecmp.
	* gconf/gconfd.c: (gconf_main), (gconf_main_quit): Replace
	g_main_* with g_main_loop_*.
	* examples/simple-controller.c: (main): Use g_signal_connect
	instead of gtk_signal_connect.
	* examples/simple-view.c: (key_changed_callback): Use
	gtk_label_set_text instead of gtk_label_set.

2002-02-12  Havoc Pennington  <hp@pobox.com>

	* configure.in: version 1.1.8

2002-02-10  Jody Goldberg <jody@gnome.org>

	* gconf/gconftool.c : Include libxml/globals to get xmlFree
	  Without it we call a NULL function pointer.