@@ -476,12 +476,14 @@ value is not set.</para></warning>
 @schema_name: name of the schema applied to this entry
 @pad1: 
 @pad2: 
+@pad3: 
+@pad4: 
 @refcount: 
 @is_default: whether @value is a default from the schema
 @is_writable: whether a new value could be set for this entry
-@pad3: 
-@pad4: 
 @pad5: 
+@pad6: 
+@pad7: 
 
 <!-- ##### FUNCTION gconf_entry_new_nocopy ##### -->
 <para>
