@@ -1,3 +1,9 @@
+2002-03-14  Havoc Pennington  <hp@redhat.com>
+
+	* gconf/gconf-sanity-check.c (check_gconf): beef up the sanity
+	checker to detect stuck locks, missing config files, and other
+	screwups.
+
 2002-03-10  Havoc Pennington  <hp@pobox.com>
 
 	* gconf/gconf-sources.c (gconf_sources_query_metainfo): fix
